added option to silence jre-25-warning