@@ -3,4 +3,4 @@ WORKDIR /app
 COPY target/spring-boot-admin-*.jar app.jar
 
 EXPOSE 8500
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "--enable-native-access=ALL-UNNAMED", "-jar", "app.jar"]
